--- a/04-design-a-rate-limiter/pyproject.toml
+++ b/04-design-a-rate-limiter/pyproject.toml
@@ -8,7 +8,13 @@ packages = [{include = "04_design_a_rate_limiter"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+fastapi = {extras = ["all"], version = "^0.88.0"}
 
+
+[tool.poetry.group.dev.dependencies]
+black = "^22.10.0"
+isort = "^5.10.1"
+pycln = "^2.1.2"
 
 [build-system]
 requires = ["poetry-core"]
