--- a/04-design-a-rate-limiter/pyproject.toml
+++ b/04-design-a-rate-limiter/pyproject.toml
@@ -13,6 +13,7 @@ python = "^3.10"
 black = "^22.10.0"
 isort = "^5.10.1"
 pycln = "^2.1.2"
+locust = "^2.13.1"
 
 [build-system]
 requires = ["poetry-core"]
