--- a/04-design-a-rate-limiter/src/config.yaml
+++ b/04-design-a-rate-limiter/src/config.yaml
@@ -1,7 +1,7 @@
 common:
   forward_host: 127.0.0.1
   forward_port: 8080
-  buf_size: 1024
+  socket_buf_size: 1024
 leaky_bucket:
   periodic_second: 1
   n_request_to_be_processed_per_periodic_second: 2
