--- a/04-design-a-rate-limiter/src/config.yaml
+++ b/04-design-a-rate-limiter/src/config.yaml
@@ -5,4 +5,4 @@ common:
 leaky_bucket:
   periodic_second: 1
   n_request_to_be_processed_per_periodic_second: 5
-  max_request_queue_size: 5
+  request_queue_size: 5
