fix(04-design-a-rate-limiter): fix Request Processor thread quickly terminated problem

--- a/04-design-a-rate-limiter/src/config.yaml
+++ b/04-design-a-rate-limiter/src/config.yaml
@@ -2,7 +2,8 @@ common:
   forward_host: 127.0.0.1
   forward_port: 8080
   socket_buf_size: 1024
-rate_limit_algorithm: token bucket
+#rate_limit_algorithm: token bucket
+rate_limit_algorithm: leaky bucket
 leaky_bucket:
   periodic_second: 0.1
   n_request_to_be_processed_per_periodic_second: 5
