--- a/05-design-consistent-hashing/pyproject.toml
+++ b/05-design-consistent-hashing/pyproject.toml
@@ -10,6 +10,10 @@ packages = [{include = "05_design_consistent_hashing"}]
 python = "^3.10"
 
 
+[tool.poetry.group.dev.dependencies]
+Faker = "^15.3.4"
+pytest = "^7.2.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
