--- a/05-design-consistent-hashing/pyproject.toml
+++ b/05-design-consistent-hashing/pyproject.toml
@@ -13,6 +13,9 @@ python = "^3.10"
 [tool.poetry.group.dev.dependencies]
 Faker = "^15.3.4"
 pytest = "^7.2.0"
+black = "^22.12.0"
+isort = "^5.11.3"
+pycln = "^2.1.2"
 
 [build-system]
 requires = ["poetry-core"]
