--- a/06-design-a-key-value-store/store/pyproject.toml
+++ b/06-design-a-key-value-store/store/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 fastapi = {extras = ["all"], version = "^0.88.0"}
+requests = "^2.28.1"
 
 
 [tool.poetry.group.dev.dependencies]
