--- a/06-design-a-key-value-store/store/pyproject.toml
+++ b/06-design-a-key-value-store/store/pyproject.toml
@@ -20,3 +20,6 @@ pycln = "^2.1.2"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.isort]
+profile = "black"
