--- a/06-design-a-unique-id-generator-in-distributed-systems/pyproject.toml
+++ b/06-design-a-unique-id-generator-in-distributed-systems/pyproject.toml
@@ -10,6 +10,12 @@ packages = [{include = "06_design_a_unique_id_generator_in_distributed_systems"}
 python = "^3.11"
 
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.2.1"
+black = "^22.12.0"
+isort = "^5.11.4"
+pycln = "^2.1.3"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
